--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
   </div>
 </nav>
 
-<section class="h-900px h-sm-650px h-xxl-900px d-flex align-items-center">
-  <div class="mycontainer d-flex justify-content-between flex-sm-row flex-column">
-    <div class="d-flex flex-column col-sm-6 col-12 text-center text-sm-start justify-content-center">
+<section class="h-900px h-md-750px h-xl-650px h-xxl-900px d-flex align-items-center">
+  <div class="mycontainer d-flex justify-content-between flex-xl-row flex-md-column flex-column">
+    <div class="d-flex flex-column col-xl-6 col-12 text-center text-xl-start justify-content-center">
       <h2 class="fs-2 lh-base fc-very-dark-blue fw-semibold">
         All your files in one secure location, accessible anywhere.
       </h2>
@@ -55,17 +55,17 @@
           Get Started
         </button>
       </form>
-      <span id="message-1" style="height: 20px;color: #dc3545;" class="fs-normal"></span>
+      <span id="message-1" style="height: 20px;color: #dc3545;" class="fs-normal text-start"></span>
     </div>
-    <div class="col-sm-5 col-12 order-lg-last order-first">
+    <div class="col-xl-5 col-md-6 mx-md-auto col-12 order-first order-xl-last">
       <img src="./images/illustration-1.svg" width="100%">
     </div>
   </div>
 </section>
 
 <section class="background-image h-1000px h-sm-900px d-flex align-items-center">
-  <div class="mycontainer d-flex justify-content-between flex-column flex-sm-row">
-    <div class="d-flex flex-column justify-content-between col-12 col-sm-6">
+  <div class="mycontainer d-flex justify-content-between flex-md-column flex-column flex-xl-row">
+    <div class="d-flex flex-column justify-content-between mt-md-5 mt-xl-0 col-12 col-xl-6">
       <h2 class="fs-5 mb-4 mt-sm-0 fw-semibold text-center text-sm-start fc-very-dark-blue">
         Stay productive, wherever you are
       </h2>
@@ -83,7 +83,7 @@
           <img src="./images/icon-arrow.svg">
         </a>
       </div>
-      <div class="card px-4 py-3 col-12 col-sm-8 col-xxl-7">
+      <div class="card px-4 py-3 col-12 col-md-7 col-xl-8 col-xxl-7">
         <div class="card-body p-2 p-sm-3">
           <h6 class="card-subtitle mb-2 fs-normal text-muted"><img src="./images/icon-quotes.svg"></h6>
           <p class="card-text fs-small lh-base">        
@@ -103,39 +103,39 @@
 
       </div>
     </div>
-    <div class="col-12 order-first col-sm-5">
+    <div class="col-12 col-md-6 mx-md-auto order-first order-xl-last col-xl-5 mb-sm-0 mb-5">
       <img src="./images/illustration-2.svg" width="100%">
     </div>
   </div>
 </section>
 
 <section class="bg-desaturated-blue text-light d-flex align-items-center h-400px">
-  <div class="mycontainer d-flex justify-content-between align-items-center flex-column flex-sm-row">
-    <div class="d-flex flex-column col-12 col-sm-6">
-      <span class="fs-medium mb-4 text-center text-sm-start">
+  <div class="mycontainer d-flex justify-content-between align-items-center flex-column flex-xl-row">
+    <div class="d-flex flex-column col-12 col-xl-6">
+      <span class="fs-medium mb-4 text-center text-xl-start">
         Get early access today
       </span>
-      <span class="fs-normal lh-base text-center text-sm-start">
+      <span class="fs-normal lh-base text-center text-xl-start">
         It only takes a minute to sign up and our free starter tier is extremely generous. 
         If you have any questions, our support team would be happy to help you.
       </span>
     </div>
-    <form style="border:1px solid unset" class="col-10 col-sm-5 mt-4 mt-sm-0 justify-content-center flex-column d-flex">
-      <div style="border: 1px solid rgb(156, 156, 156);" class="mb-sm-0 mb-2 col-12 rounded-2 overflow-hidden">
+    <form style="border:1px solid unset" class="col-10 col-xl-5 mt-4 mt-xl-0 justify-content-center flex-column d-flex">
+      <div style="border: 1px solid rgb(156, 156, 156);" class="mb-xl-0 mb-2 col-12 rounded-2 overflow-hidden">
         <input style="outline: none;" id="input-2" class="h-100 col-12 border-0 ps-3 py-2 py-sm-3">
       </div>
-      <span id="message-2" style="height: 20px;color: white;" class="mb-2 mb-sm-4 fs-normal order-last order-sm-2"></span>
-      <button class="fs-normal btn-bright-blue text-light align-self-start col-12 col-sm-7 py-2 py-sm-3 order-2 order-sm-last">Get Started For Free</button>
+      <span id="message-2" style="height: 20px;color: white;" class="mb-2 mt-2 mt-xl-0 mb-xl-4 fs-normal order-last order-xl-2"></span>
+      <button class="fs-normal btn-bright-blue text-light align-self-start col-12 col-xl-7 py-2 py-sm-3 order-2 order-xl-last">Get Started For Free</button>
     </form>
   </div>
 </section>
 
-  <footer class="d-flex align-items-center bg-very-dark-blue h-650px h-sm-400px">
+  <footer class="d-flex align-items-center bg-very-dark-blue h-650px h-xl-400px">
     <div class="mycontainer d-flex flex-column">
       <div class="logo-footer mb-4">
         <img src="./images/logo2.svg">
       </div>
-      <div style="border: 1px solid unset;" class="text-light mt-4 mt-sm-0 fs-normal d-flex justify-content-between flex-column flex-sm-row">
+      <div style="border: 1px solid unset;" class="text-light mt-4 mt-xl-0 fs-normal d-flex justify-content-between flex-column flex-xl-row">
         <ul class="d-flex p-0 flex-column list-unstyled ">
           <li class="mb-2">
             <img class="me-2" src="./images/icon-phone.svg">
@@ -147,7 +147,7 @@
           </li>
         </ul>
 
-      <ul class="d-flex flex-column p-0 list-unstyled nav-footer  mt-4 mt-sm-0">
+      <ul class="d-flex flex-column p-0 list-unstyled nav-footer  mt-4 mt-xl-0">
         <li class="mb-3">
           About Us
         </li>
@@ -162,7 +162,7 @@
         </li>
       </ul>
       
-      <ul class="d-flex flex-column p-0 list-unstyled nav-footer  mt-4 mt-sm-0">
+      <ul class="d-flex flex-column p-0 list-unstyled nav-footer  mt-4 mt-xl-0">
         <li class="mb-3">
           Contact Us
         </li>
@@ -186,11 +186,11 @@
           <img src="./images/instagram.png" width="25" height="25">
         </div>
       </div>
-      <div id="socialmedia-mobile" class="d-none social-media col-12 justify-content-center justify-content-sm-between align-items-start col-sm-2  mt-4 mt-sm-0">
+      <div id="socialmedia-mobile" class="d-none social-media col-12 justify-content-center align-items-start mt-4">
         <div style="border: 1px solid white; width: 35px; height: 35px;" class="rounded-5 d-flex align-items-center justify-content-center">
           <img src="./images/facebook.png" width="18" height="18">
         </div>
-        <div style="border: 1px solid white; width: 35px; height: 35px;" class="rounded-5 d-flex align-items-center mx-sm-0 mx-4 justify-content-center">
+        <div style="border: 1px solid white; width: 35px; height: 35px;" class="rounded-5 d-flex align-items-center mx-4 justify-content-center">
           <img src="./images/twitter.png" width="18" height="18">
         </div>
         <div style="border: 1px solid white; width: 35px; height: 35px;" class="rounded-5 d-flex align-items-center justify-content-center">
@@ -215,7 +215,7 @@
     const social = document.getElementById("socialmedia-dekstop");
     const social2 = document.getElementById("socialmedia-mobile");
 
-    if (window.innerWidth < 800) {
+    if (window.innerWidth < 1280) {
       social.classList.replace("d-flex", "d-none");
       social2.classList.replace("d-none", "d-flex");
     }else {
